fix: 🫓markdown toc too long and timeline add img

--- a/src/pages/About/style.css
+++ b/src/pages/About/style.css
@@ -10,7 +10,7 @@
 }
 
 .about-container {
-    margin: var(--padding-td);
+    /*margin: var(--padding-td);*/
 }
 
 .about-container-header {
